--- a/style.css
+++ b/style.css
@@ -2,9 +2,16 @@ body{
     margin: 0;
     font-family: 'Poppins', sans-serif;}
 h1{font-size: 50px;}
-.name-highlight{
+.orange-highlight{
     color: mediumvioletred;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+
 .half-width{
         width:40%;
         float: left;
@@ -17,8 +24,58 @@ h1{font-size: 50px;}
 #topbanner{
     border: 1px;
     background-image: url("images/top-banner.png");
-}
+    background-repeat: no-repeat;
+    padding-bottom: 150px ;
+}  
+.dream-big{padding-bottom: 150px;} 
 section{
     height: 500px;
+   
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+     padding: 10px 20px;
+     border-radius: 5px;
+     color: white;
+     font-weight: 700;
+
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
+    background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.single-exp{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 10px;
+    height: 75%;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#blue{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
+#hamster{
+    text-align: center;
+}
+#paona{
+    color: mediumvioletred;
+}
+.gaan{
+    text-align: center;
+    ;
 }
